@@ -951,7 +951,9 @@ void fix_player(object *op) {
 	  op->contr->gen_sp        += tmp->stats.sp;
 	  op->contr->gen_grace     += tmp->stats.grace;
 	  op->contr->gen_sp_armour += tmp->last_heal;
+#if 0
 	  if (tmp->last_heal) LOG(llevDebug,"Object %s applied, gen_sp_armour + %d = %d\n", tmp->name, tmp->last_heal, op->contr->gen_sp_armour);
+#endif
 	}
       }
 
